--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Yejun's</title>
 </head>
 <body>
     <h6 style="font-size:30px;margin:0 auto">안녕하세요,김예준입니다!</h6>
