--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         </div>
       </div>
       <script>
-        const words = ["자동차", "두꺼비", "전지현", "옷걸이", "칼국수"];
-        const index = Math.floor(Math.random() * 5); // 0 ~ 4
+        const words = ["재벌집", "캐릭터", "가산시", "지하철", "칼퇴근"];
+        const index = Math.floor(Math.random() * 10); // 0 ~ 4
         let word = words[index];
         let timeCount = 5;
         const prevWord = document.querySelector(".prev-word");
