v05 계산기추가

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <input type="text">
     <button>입력</button>
   </div>
+  <a href="./calculator.html">계산기바로가기</a>
   <script>
     const number = Number(prompt('몇 명이 참가하나요?'));
 
